[tool.poetry]
name = "fastwebapp"
version = "0.1.0"
description = ""
authors = ["IwanK"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
alembic = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
